Attempt making anchors go away in mod_search_database and dependency_graph
Some obscure optimization makes all immutable lists returned by toList() point to the same instance, so SnakeYAML smartly uses anchors to represent that...4